<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:text="Card Information"
        android:textColor="#C20089"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/panInput"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/lato_1"
        android:hint="PAN"
        android:inputType="number"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cvvInput"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:fontFamily="@font/lato_1"
                android:hint="CVV"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/expiryInput"
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:fontFamily="@font/lato_1"
                android:hint="Expiry: MMYY"
                android:inputType="number"
                android:textColor="#009688"
                android:textSize="14sp" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="-75dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/encrTypeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:checked="false"
            android:text="Embedded:"
            android:textColor="#C20089"
            android:textSize="18sp"
            android:theme="@style/SCBSwitch"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/encCardBtn"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="@font/lato"
            android:text="Encrypt Card"
            android:textColor="#FFFEFE"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.832" />

        <Button
            android:id="@+id/encCardNdCvvBtn"
            android:layout_width="181dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_btn"

            android:fontFamily="@font/lato_1"
            android:text="Encrypt Card And CVV"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="Results"
        android:textColor="#C20089"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="196dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/panOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/lato_1"
                android:text="         PAN"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/panOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/cvvOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_1"
                android:text="         CVV"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cvvOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/expiryOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_1"
                android:text="      Expiry"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expiryOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/integrityOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_1"
                android:text="  Integrity"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/integrityOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/keyIdOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_1"
                android:text="      KeyID"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keyIdOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/phaseOutputCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_1"
                android:text="      Phase"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phaseOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/lato_1"
                android:text="N/A"
                android:textColor="#303033"
                android:textSize="14sp"
                android:textStyle="normal" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="Disclaimer: In accordance with PCI rules, only test cards should be used."
        android:textColor="#F44336"
        android:textSize="12sp" />

</LinearLayout>
